add jumbo header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -28,7 +28,53 @@
             </ul>
             <div class="nav_bars"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
         </nav>
-        <div class="jumbo_bg"></div>
+        <div class="jumbo_bg">
+            <div class="jumbo_container">
+                <section class="jumbo_item big">
+                    <div class="jumbo_info">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Ratione nobis, architecto ad
+                            dolore quod, facere totam quas recusandae
+                            blanditiis.</p>
+                        <div class="btn_large"><a href="#"><i class="fa-brands fa-apple"></i> App Store</a></div>
+                    </div>
+                    <div class="jumbo_img"><img src="assets/img/phone.png" alt="phone"></div>
+                </section>
+                <section class="jumbo_item">
+                    <div class="icon"><i class="fa-solid fa-file-code"></i></div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Ratione nobis, architecto ad
+                        dolore quod, facere totam quas recusandae
+                        blanditiis.</p>
+                </section>
+                <section class="jumbo_item">
+                    <div class="icon"><i class="fa-solid fa-compass-drafting"></i></div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Ratione nobis, architecto ad
+                        dolore quod, facere totam quas recusandae
+                        blanditiis.</p>
+                </section>
+                <section class="jumbo_item">
+                    <div class="icon"><i class="fa-solid fa-laptop-code"></i></div>
+                    <h2>Developement</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Ratione nobis, architecto ad
+                        dolore quod, facere totam quas recusandae
+                        blanditiis.</p>
+                </section>
+                <section class="jumbo_item">
+                    <div class="icon"><i class="fa-solid fa-bullhorn"></i></div>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Ratione nobis, architecto ad
+                        dolore quod, facere totam quas recusandae
+                        blanditiis.</p>
+                </section>
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
