Add planning main whit media

--- a/index.html
+++ b/index.html
@@ -76,7 +76,27 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="planning_bg">
+            <div class="planning_container">
+                <div class="strategy">
+                    <div class="planning_img"><img src="assets/img/planning1.png" alt="planning1"></div>
+                    <h2>Strategic Planning</h2>
+                    <p>Egestas dui id ornare arcu odio. In tellus integer feugiat scelerisque varius morbi anim nunc.
+                        Habitasse platea dictumst quisque sagittis. Interdum velit euismod in pellentesque massa
+                        placerat duis. Quis viverra nibh cras pulvinar mattis.</p>
+                </div>
+                <div class="developement">
+                    <div class="planning_img"><img src="assets/img/planning2.png" alt="planning2"></div>
+                    <h2>App Developement</h2>
+                    <p>Develop an on-demand app for your delivery
+                        business to reach your targeted customers
+                        without any interruption.</p>
+                    <div class="icon"><a href=""><i class="fa-solid fa-circle-down"></i></a></div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 
 </body>
