--- a/index.html
+++ b/index.html
@@ -96,6 +96,35 @@
                 </div>
             </div>
         </div>
+        <div class="testimonials_bg">
+            <div class="testimonials_container">
+                <h4>Testimonials</h4>
+                <h2>We are committed experts partners</h2>
+                <p>We place huge value on strong relationships and have seen the benefit they bring to our business.
+                    Customer feedback is vital in helping us to get it right.</p>
+                <section class="card">
+                    <div class="card_img"><img src="assets/img/testimonial1.jpg" alt="testimonial1"></div>
+                    <div class="card_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <h3>NAT REYNOLDS</h3>
+                    </div>
+                </section>
+                <section class="card">
+                    <div class="card_img"><img src="assets/img/testimonial2.jpg" alt="testimonial2"></div>
+                    <div class="card_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <h3>CELIA ALMEDA </h3>
+                    </div>
+                </section>
+                <section class="card">
+                    <div class="card_img"><img src="assets/img/testimonial3.jpg" alt="testimonial3"></div>
+                    <div class="card_text">
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <h3>BOB ROBERTS</h3>
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
     <footer></footer>
 
