--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </div>
         </div>
     </header>
+
     <main>
         <div class="planning_bg">
             <div class="planning_container">
@@ -105,29 +106,100 @@
                 <section class="card">
                     <div class="card_img"><img src="assets/img/testimonial1.jpg" alt="testimonial1"></div>
                     <div class="card_text">
-                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i
+                                class="fa-solid fa-quote-right"></i></p>
                         <h3>NAT REYNOLDS</h3>
                     </div>
                 </section>
                 <section class="card">
                     <div class="card_img"><img src="assets/img/testimonial2.jpg" alt="testimonial2"></div>
                     <div class="card_text">
-                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i
+                                class="fa-solid fa-quote-right"></i></p>
                         <h3>CELIA ALMEDA </h3>
                     </div>
                 </section>
                 <section class="card">
                     <div class="card_img"><img src="assets/img/testimonial3.jpg" alt="testimonial3"></div>
                     <div class="card_text">
-                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i class="fa-solid fa-quote-right"></i></p>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Minus officiis recusandae perferendis omnis quas aspernatur provident a sit. <i
+                                class="fa-solid fa-quote-right"></i></p>
                         <h3>BOB ROBERTS</h3>
                     </div>
                 </section>
             </div>
         </div>
+        <div class="benefits_bg">
+            <div class="benefits_container">
+                <h2>Benefits of working whit us</h2>
+                <section class="benefit">
+                    <h4>01</h4>
+                    <h3>High Quality</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+                <section class="benefit">
+                    <h4>02</h4>
+                    <h3>Creative Team</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+                <section class="benefit">
+                    <h4>03</h4>
+                    <h3>Amazing Results</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+                <section class="benefit">
+                    <h4>04</h4>
+                    <h3>Best Pricing</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+                <section class="benefit">
+                    <h4>05</h4>
+                    <h3>Innovations</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+                <section class="benefit">
+                    <h4>06</h4>
+                    <h3>24/7 Support</h3>
+                    <p>Vitae suscipit tellus maurîs a diam
+                        maecenas sed enim ut. Mauris augue
+                        neque gravida in fermentum. Praesent
+                        semper feugiat nibh sed pulvinar proin id
+                        venenatis.</p>
+                    <div class="btn"><a href="#">more</a></div>
+                </section>
+            </div>
+        </div>
     </main>
-    <footer></footer>
 
+    <footer></footer>
 </body>
 
 </html>
