Add about us whit media

--- a/index.html
+++ b/index.html
@@ -197,6 +197,33 @@
                 </section>
             </div>
         </div>
+        <div class="about_us_bg">
+            <div class="about_us_container">
+                <section class="info">
+                    <h2>About Us</h2>
+                    <p>Sample text. Click to Egestas egestas fringilla phasellus faucibus scelerisque
+                        eleifend donec pretium vulputate. Pharetra magna ac placerat vestibulum. Quam lacus suspendisse
+                        faucibus interdum posuere Lorem. Egestas tellus rutrum tellus pellentesque eu tincidunt. Neque
+                        vitae tempus quam pellentesque nec. Vel elit
+                        scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Interdum
+                        velit euismod in pellentesque massa placerat duis.</p>
+                    <p>Quis viverra nibh cras pulvinar mattis. Ornare arcu dui vivamus arcu felis
+                        bibendum ut tristique. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras
+                        fermentum odio. Dignissim diam quis enim lobortis scelerisque. Tellus molestie
+                        nunc non blandit massa enim. the text box. Click again or double click to start editing the
+                        text.</p>
+                </section>
+                <div class="profile">
+                    <div class="profile_img">
+                        <img src="assets/img/about.jpg" alt="about">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>
+                    <p>I help companies ticidunt tortor aliquam nulla facilisi cras fermetum odio.</p>
+                    <div class="btn"><a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
+
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer></footer>
