Add get started whit media

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <p>Develop an on-demand app for your delivery
                         business to reach your targeted customers
                         without any interruption.</p>
-                    <div class="icon"><a href=""><i class="fa-solid fa-circle-down"></i></a></div>
+                    <div class="icon"><a href="#"><i class="fa-solid fa-circle-down"></i></a></div>
                 </div>
             </div>
         </div>
@@ -222,6 +222,16 @@
                     <div class="btn"><a href="#"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
 
                 </div>
+            </div>
+        </div>
+        <div class="get_started_bg">
+            <div class="get_started_container">
+                <h4>GET STARTED</h4>
+                <h3>Simple, Transparent Pricing</h3>
+                <h2>It's Free!</h2>
+                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans whit more controls.</p>
+                <div class="btn"><a href="#">Get Started</a></div>
+                <div class="copyright"><a href="#">Copyright 2023 Boolean</a> • <a href="#">Classe 96</a> • <a href="#">Privacy policy</a></div>
             </div>
         </div>
     </main>
