Add footer whit media

--- a/index.html
+++ b/index.html
@@ -229,14 +229,22 @@
                 <h4>GET STARTED</h4>
                 <h3>Simple, Transparent Pricing</h3>
                 <h2>It's Free!</h2>
-                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other plans whit more controls.</p>
+                <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other
+                    plans whit more controls.</p>
                 <div class="btn"><a href="#">Get Started</a></div>
-                <div class="copyright"><a href="#">Copyright 2023 Boolean</a> • <a href="#">Classe 96</a> • <a href="#">Privacy policy</a></div>
+                <div class="copyright"><a href="#">Copyright 2023 Boolean</a> • <a href="#">Classe 96</a> • <a
+                        href="#">Privacy policy</a></div>
             </div>
         </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="footer_container">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Commodi maiores minima vitae vero nulla pariatur impedit!</p>
+            <div class="footer_links"><span><a href="#">Lorem ipsum</a></span> scelerisque mauris pellentesque <span><a href="#">Boolean Careers</a></span></div>
+        </div>
+    </footer>
 </body>
 
 </html>
