fix some problems

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="assets/style.css">
     <title>Esercizio 13</title>
 </head>
@@ -28,6 +28,7 @@
             </ul>
             <div class="nav_bars"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
         </nav>
+
         <div class="jumbo_bg">
             <div class="jumbo_container">
                 <section class="jumbo_item big">
@@ -97,6 +98,7 @@
                 </div>
             </div>
         </div>
+
         <div class="testimonials_bg">
             <div class="testimonials_container">
                 <h4>Testimonials</h4>
@@ -132,6 +134,7 @@
                 </section>
             </div>
         </div>
+
         <div class="benefits_bg">
             <div class="benefits_container">
                 <h2>Benefits of working whit us</h2>
@@ -197,6 +200,7 @@
                 </section>
             </div>
         </div>
+
         <div class="about_us_bg">
             <div class="about_us_container">
                 <section class="info">
@@ -224,6 +228,7 @@
                 </div>
             </div>
         </div>
+
         <div class="get_started_bg">
             <div class="get_started_container">
                 <h4>GET STARTED</h4>
@@ -232,8 +237,9 @@
                 <p>We're still in beta and we will be for awhile. As we add more functionality, we'll look into other
                     plans whit more controls.</p>
                 <div class="btn"><a href="#">Get Started</a></div>
-                <div class="copyright"><a href="#">Copyright 2023 Boolean</a> • <a href="#">Classe 96</a> • <a
-                        href="#">Privacy policy</a></div>
+                <div class="copyright">
+                    <a href="#">Copyright 2023 Boolean</a> • <a href="#">Classe 96</a> • <a href="#">Privacy policy</a>
+                </div>
             </div>
         </div>
     </main>
@@ -242,7 +248,10 @@
         <div class="footer_container">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Commodi maiores minima vitae vero nulla pariatur impedit!</p>
-            <div class="footer_links"><span><a href="#">Lorem ipsum</a></span> scelerisque mauris pellentesque <span><a href="#">Boolean Careers</a></span></div>
+            <div class="footer_links">
+                <span><a href="#">Lorem ipsum</a></span> scelerisque mauris pellentesque <span><a href="#">Boolean
+                        Careers</a></span>
+            </div>
         </div>
     </footer>
 </body>
